--- a/src/components/Navigation/Toolbar/toolbar.module.css
+++ b/src/components/Navigation/Toolbar/toolbar.module.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     border-bottom: 2px solid #1E1E24;
-    z-index: 1;
+    z-index: 3;
 }
 
 @media (max-width: 576px) {
